# VanningLayout

./: .gitignore  README.md  成果物仕様.md
2026_SolutionDeployment_Eval/: .gitignore  README.md
2026_SolutionDeployment_Eval/scoreboard/: history.json  (+1 more)
2026_SolutionDeployment_Eval/submission_MCP/: .mcp.json.example  README.md  pyproject.toml
2026_SolutionDeployment_Eval/submission_MCP/src/vanning_eval_mcp/: __init__.py  __main__.py  config.py  dedupe.py  paths.py  server.py
2026_SolutionDeployment_Eval/submission_MCP/src/vanning_eval_mcp/tests/: test_dedupe.py  test_paths.py  test_smoke.py
2026_SolutionDeployment_Eval/vanning_eval/: .gitignore  CLAUDE.md  launch.bat  launch_local.bat  main.py  pyproject.toml
2026_SolutionDeployment_Eval/vanning_eval/.streamlit/: secrets.toml.example
2026_SolutionDeployment_Eval/vanning_eval/docs/: DESIGN.md  VIEWER_DESIGN.md  VIEWER_RESEARCH.md  scoring_explainer_legacy.py  web_server_overview.html
2026_SolutionDeployment_Eval/vanning_eval/input/: README.md
2026_SolutionDeployment_Eval/vanning_eval/input/test/: layout_result.json
2026_SolutionDeployment_Eval/vanning_eval/scripts/: backfill_per_container_score.py  migrate_canonical_sha.py  quarantine_noncanonical_history.py  restore_non_canonical_history.py
2026_SolutionDeployment_Eval/vanning_eval/src/vanning_eval/: __init__.py  __main__.py  canonical_input.py  cli.py  constraints.py  metrics.py  report.py  schema.py  scoring.py
2026_SolutionDeployment_Eval/vanning_eval/src/vanning_viewer/: __init__.py  __main__.py  _ui.py  cli.py  colors.py  plotly_renderer.py  scoreboard_client.py  streamlit_app.py  submitter.py  view_model.py
2026_SolutionDeployment_Eval/vanning_eval/src/vanning_viewer/static/: streamlit_skin.css  tokens.css
2026_SolutionDeployment_Eval/vanning_eval/tests/: test_canonical_gate.py  test_canonical_input.py  test_constraints.py  test_fixtures.py  test_labels.py  test_metrics.py  test_report.py  test_scoring.py  test_streamlit_score.py  test_submitter.py  test_view_model.py
adv_hard_v2cmaes/: README.md
taiga/: README.md  algorithm.py  generate_items_json.py
(+211 files in other folders)
