[project]
name = "vanning-eval"
version = "0.1.0"
description = "Vanning layout evaluator module"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1",
]
# viewer: 3D 可視化モジュール (src/vanning_viewer) の依存。
#   plotly: go.Mesh3d によるブラウザ内 3D 描画、hover/回転/ズーム対応
#   streamlit: localhost WebUI エントリ（Phase 2）
#   requests: GitHub Contents API 経由のリーダーボード読み書き（Phase 3）
viewer = [
    "plotly>=5.20",
    "streamlit>=1.32",
    "requests>=2.31",
]

[project.scripts]
vanning-eval = "vanning_eval.cli:main"
vanning-viewer = "vanning_viewer.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
